--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,14 @@
-<app-menu></app-menu>
-<app-header></app-header>
+
+<div class="app-container">
+  <div class="header-div">
+    <app-header></app-header>
+  </div>
+  <div class="app-content">
+    <div class="menu-div">
+     <app-menu></app-menu>
+    </div>
+    <div class="content">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
