--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,17 +1,6 @@
-.sidenav-container {
-  height: 100%;
+.example-spacer {
+flex: 1 1 auto;
 }
-
-.sidenav {
-  width: 200px;
-}
-
-.sidenav .mat-toolbar {
-  background: inherit;
-}
-
-.mat-toolbar.mat-primary {
-  position: sticky;
-  top: 0;
-  z-index: 1;
+.button{
+    background-color: inherit;
 }
