--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,18 +1,21 @@
 <mat-sidenav-container>
-    <mat-sidenav #sidenav>
+    <mat-sidenav  opened mode="side">
       <mat-nav-list>
   
-        <a mat-list-item > repertuar </a>
-        <a mat-list-item > Price List </a>
-        
-        <a mat-list-item (click)="sidenav.toggle()" href="" mat-list-item>Close</a>
+        <a mat-list-item [routerLink]="['/repertuar']" routerLinkActive="router-link-active"> <mat-icon >format_align_justify</mat-icon>repertuar </a>
+        <a mat-list-item [routerLink]="['/priceList']" routerLinkActive="router-link-active">  <mat-icon >money</mat-icon> Price List  </a>
+        <a mat-list-item [routerLink]="['/actors']" routerLinkActive="router-link-active">  <mat-icon >money</mat-icon> Actors  </a>
+        <a mat-list-item [routerLink]="['/filmBase']" routerLinkActive="router-link-active">  <mat-icon >money</mat-icon> Film Base  </a>
+
+          
+          
   
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
       <div style="height: 88vh;">
   
-        asdsadasds
+        <router-outlet></router-outlet>
       </div>
     </mat-sidenav-content>
   </mat-sidenav-container>
