centering not working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 
-<div class="app-container">
-  <div class="header-div">
+<div >
+  <div>
     <app-header></app-header>
   </div>
-  <div class="app-content">
-    <div class="menu-div">
+  <div>
+    <div>
      <app-menu></app-menu>
     </div>
-    <div class="content">
-      
+    <div>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
