--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,15 +1,20 @@
 
-<mat-toolbar color="primary">
-    <mat-toolbar-row>
-    
-      <span style="margin-left: 100px"> Angular Cinema </span>
-      <span class="menu-spacer"></span>
-      <button mat-icon-button [routerLink]="['/']" routerLinkActive="router-link-active" >
-        <mat-icon >home</mat-icon>
-      </button>
-      
-    </mat-toolbar-row>
-  
-    
-  </mat-toolbar>
-  
+<nav>
+  <div class="logo">
+    <h4>Cinema</h4>
+  </div>
+  <ul class="nav-links">
+    <li>
+      <a>Home</a>
+    </li>
+    <li>
+      <a>Repertuar</a>
+    </li>
+    <li>
+      <a>Prices</a>
+    </li>
+    <li>
+      <a>About</a>
+    </li>
+  </ul>
+</nav>
