--- a/src/app/repertuar/repertuar.component.html
+++ b/src/app/repertuar/repertuar.component.html
@@ -1,15 +1,8 @@
-<div class="col-md-5">
-    <h4>Repertuar</h4>
-    <ul class="list-group">
-        <li class="list-group-item"
-        *ngFor="let film of films; let i = index;"
-        [class.active]="i == currentIndex">
-
-            {{film.filmTitle}}
-         </li>
-        
-
-
-        
-    </ul>
+<div class="container">
+  <mat-card class ="item" *ngFor="let film of films">
+    <img src ="http://localhost:3000/images/{{film.url}}" mat-card-image>
+        <mat-card-content>
+            {{ film.film_title }}
+        </mat-card-content>
+  </mat-card>
 </div>
