--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body { height: 100%;}
+body {  font-family: Roboto, "Helvetica Neue", sans-serif; }
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
