--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,9 @@
-
-<div >
-  <div>
+<div>
+  <div class="header">
     <app-header></app-header>
   </div>
-  <div>
-    <div>
-     <app-menu></app-menu>
-    </div>
-    <div>
-      <router-outlet></router-outlet>
-    </div>
+  <div class="container">
+    <router-outlet></router-outlet>
   </div>
+
 </div>
