--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,16 +1,22 @@
-nav{
+.nav{
     display: flex;
     justify-content: space-around;
+    flex-direction: row;
     align-items: center;
-    
+    min-height: 8vh;
     background-color: #5bc0de;
 
+}
+
+ol, ul, li, h4{
+    margin-bottom: 0px;
 }
 .logo{
     color: #f7f7f7;
     text-transform: uppercase;
     letter-spacing: 5px;
     font-size: 20px;
+    align-items: center;
 }
 .nav-links{
     display: flex;
@@ -26,5 +32,50 @@ nav{
 
 }
 .nav-links li{
-    list-style: none;
+    list-style:none;
+}
+.burger div{
+    width: 20px;
+    height: 2px;
+    background-color: #f7f7f7;
+    margin: 5px;
+}
+.burger{
+    display: none;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 1024px){
+    .nav-links{
+        width: 60%;
+    }
+}
+@media screen and (max-width: 768px){
+    .wrapper{
+        overflow-x: hidden;
+        position: relative;
+    }
+    .nav-links{
+        position: absolute;
+        right: 0px;
+        height: 92vh;
+        top: 8vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 50px;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+    }
+    .nav-links li{
+        opacity: 0;
+    }
+    .burger{
+        display: block;
+    }
+    
+
+}
+.nav-active{
+    transform: translateX(0%);
 }
