--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,20 +1,27 @@
-
-<nav>
-  <div class="logo">
-    <h4>Cinema</h4>
+<div class="wrapper">
+<nav class="nav">
+  <div>
+    <h4 class="logo">Cinema</h4>
   </div>
   <ul class="nav-links">
     <li>
-      <a>Home</a>
+      <a [routerLink]="['/']" routerLinkActive="router-link-active" >Home</a>
     </li>
     <li>
-      <a>Repertuar</a>
+      <a [routerLink]="['/repertuar']" routerLinkActive="router-link-active">Repertoire</a>
     </li>
     <li>
-      <a>Prices</a>
+      <a [routerLink]="['/priceList']" routerLinkActive="router-link-active">Prices</a>
     </li>
     <li>
-      <a>About</a>
+      <a [routerLink]="['/about']" routerLinkActive="router-link-active">About</a>
     </li>
   </ul>
+  <div class="burger" [ngClass]="{'nav-active': status == true}" (click)="onClick()">
+    <div class="line1"></div>
+    <div class="line2"></div>
+    <div class="line3"></div>
+  </div>
+
 </nav>
+</div>
