--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 html, body { height: 100%;}
 body {  font-family: Roboto, "Helvetica Neue", sans-serif; }
 *{
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
