--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div>
   <div class="header">
     <app-header></app-header>
+    <app-menu></app-menu>
   </div>
   <div class="container">
     <router-outlet></router-outlet>
