--- a/src/app/repertuar/repertuar.component.css
+++ b/src/app/repertuar/repertuar.component.css
@@ -1,14 +1,34 @@
-mat-card-content{
-    text-align: center;
+.mat-card-image{
+    height: 300px;
+    width: 200px;
 }
-.container{
+mat-card{
+    text-align: center;
+    color: #FFFFFF;
+    background-color: #000000;
+}
+h1{
+    margin-top: 3vh;
+    font-size: 42px;
+    font-family: "Exo";
+    font-weight: bold;
+    color: #FFFFFF;
+}
+h2{
+    font-size: 30px;
+    font-family: "Exo";
+    font-weight: bold;
+    color: #FFFFFF;
+}
+.wrapper{
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
+    
 }
 .item{
     width: 200px;
-    height: 200px;
+    height: 300px;
 }
 @media screen and (min-width: 480px){
     body{
