--- a/src/app/repertuar/repertuar.component.html
+++ b/src/app/repertuar/repertuar.component.html
@@ -1,5 +1,8 @@
-<div class="container">
-  <mat-card class ="item" *ngFor="let film of films" routerLink ="/repertuar/film/{{film.id}}" routerLinkActive="router-link-active" >
+<h1>Movies</h1>
+<h2>Now playing</h2>
+<div class="wrapper">
+
+  <mat-card  *ngFor="let film of films" routerLink ="/repertuar/film/{{film.id}}" routerLinkActive="router-link-active" >
     <img src ="http://localhost:3000/images/{{film.url}}" mat-card-image>
         <mat-card-content>
             {{ film.film_title }}
