--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%;}
-body {  font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { background-color: #000000; font-family: Roboto, "Helvetica Neue", sans-serif; }
