--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <app-header></app-header>
     <app-menu></app-menu>
   </div>
-  <div class="container">
+  <div class="content">
     <router-outlet></router-outlet>
   </div>
 
