--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,7 +4,7 @@
       <a [routerLink]="['/']" routerLinkActive="router-link-active" >Home</a>
     </li>
     <li>
-      <a [routerLink]="['/repertuar']" routerLinkActive="router-link-active">Repertoire</a>
+      <a [routerLink]="['/repertuar']" routerLinkActive="router-link-active">Movies</a>
     </li>
     <li>
       <a [routerLink]="['/priceList']" routerLinkActive="router-link-active">Prices</a>
