--- a/src/app/repertuar/repertuar.component.html
+++ b/src/app/repertuar/repertuar.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <h1>Movies</h1>
 <h2>Now playing</h2>
 <div class="wrapper">
@@ -8,4 +9,5 @@
             {{ film.film_title }}
         </mat-card-content>
   </mat-card>
+</div>
 </div>
