--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -9,7 +9,7 @@
 }
 .menu-content{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-direction: row;
     width: 80%;
     
