--- a/src/app/booking/booking.component.css
+++ b/src/app/booking/booking.component.css
@@ -9,20 +9,26 @@ ul{
     font-size: 32px; 
     display: flex;
     flex-direction: row;
-    width: 60%;
-    justify-content: space-around;
+    width: 55%;
+    justify-content: space-evenly;
 }
 h1{
     font-weight: bold;
+    font-size: 42px;
+    padding-top: 2vh;
+    margin-left: 4vh;
+}
+h2{
     font-size: 32px;
     padding-top: 2vh;
-    margin-left: 2vh;
+    font-weight: bold;
+    font-family: "Exo";
 }
 .date{
     margin-top: 3vh;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
 }
 span{
@@ -32,7 +38,12 @@ span{
 }
 li{
     list-style: none;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    
 }
+
 .basic-container{
     padding: 30px;
 }
@@ -44,6 +55,28 @@ span:hover{
     color: #F56600;
 
 }
+a{
+    cursor: pointer;
+    text-decoration: none;
+    color: #000000;
+}
 .chosen{
     color: #F56600;
+}
+.available{
+    background-color: #f2f7f4;
+}
+.hours-list{
+    display: flex;
+    flex-direction: row;
+}
+.hours-list > div{
+    margin-left: 2vh;
+}
+button{
+    color: #FFFFFF;
+    height:
+}
+.mat-button{
+    background-color:#F56600;
 }
